# catch_them_all

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini
catch_them_all/: asgi.py  settings.py  urls.py  wsgi.py
pokemon/: admin.py  apps.py  models.py  urls.py  views.py
pokemon/management/commands/: catch_them_all.py
pokemon/migrations/: 0001_initial.py  0002_searchhistory.py
pokemon/services/: pokemon_service.py
pokemon/tests/: test_pokemon_service.py
staticfiles/: styles.css
templates/: search.html
